# pi-gateway

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md
.github/workflows/: on-release.yaml
benchmark/: .gitignore  pyproject.toml
benchmark/scripts/: tdd.py
benchmark/src/walle_bench/: __init__.py  agent.py  cli.py  client.py  docker.py  runner.py  utils.py
benchmark/src/walle_bench/static/contexts/: carl.md  minimal.md
benchmark/tests/: test_cron.py  test_media.py  test_memory.py  test_no_reply.py  test_onboarding.py  test_security.py
docs/: Makefile
docs/source/: at.md  composio.md  conf.py  cron.md  deployment.md  environment.md  index.md  release.md  sessions.md  supervision.md
impl/: 20260627--walle-gateway.md  20260702--session-debug.md  20260702--telegram-slash-cmd.md  20260703--supervisord.md  20260709--container-cron.md  20260710--benchmarking.md  20260711--cli-message-injection.md  20260713--composio.md  20260713--multi-media-support.md  20260713--operator-contact-agents.md  20260714--discord-channel.md  20260714--no-reply.md  20260715--deployment-cycle.md
scripts/: backup-home.sh  bump.py  codex-oauth.py  deploy.sh  release.py  restore-home.sh
src/: go.mod  main.go  main_test.go
src/chat/: buffered_reply.go  buffered_reply_test.go  chat.go  commands.go  discord.go  discord_api.go  discord_commands.go  discord_test.go  fakepi_test.go  telegram.go  telegram_commands.go  telegram_markdown.go  telegram_markdown_test.go  telegram_test.go
static/: .tmux.conf  .vimrc  APPEND_SYSTEM.md  CONTEXT.md  SOUL.md  SYSTEM.md
(+49 files in other folders)
